--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -11,6 +11,9 @@
     </div>
   <% end %>
 
+
+not working...
+
 <div class="indent_row">
 <h3>Login Info</h3>
   <%= f.fields_for :user do |builder| %>
@@ -18,6 +21,7 @@
   <% end %>
 </div>
 <div class="clearer"></div>
+
 <% if current_user.roles.any? {|role| role.name == "superuser" or role.name == "admin" } %>
 <div class="indent_row">
 <h3>Website Role(s)</h3>
