updated to dos document

--- a/app/views/event_signups/index.html.erb
+++ b/app/views/event_signups/index.html.erb
@@ -1,3 +1,7 @@
+<% content_for :header do %>
+  <%= stylesheet_link_tag "print_style.css", :media => "print" %>
+<% end %>
+
 <% airshow = "" %>
 
 <h1>Airshow Signups</h1>
