--- a/app/views/events/_event_details.html.erb
+++ b/app/views/events/_event_details.html.erb
@@ -1,1 +1,50 @@
-TEST
+
+    <script src="http://maps.google.com/maps?file=api&amp;v=2&amp;key=AIzaSyA2CUo-V9LEi2YuJvh6F_Sf7NkmpXnC4yE"
+      type="text/javascript"></script>
+
+<% map_url = "http://maps.googleapis.com/maps/api/staticmap?zoom=8&size=200x200&maptype=roadmap&markers=color:red%7Clabel:X%7C"+@event.location.latitude+","+@event.location.longitude+"&sensor=false" %>
+
+
+<h3><%= @event.title %></h3>
+<div class="clearer"></div>
+<div id="calendar" style="float: left;">
+  <div id="calendar_year">
+    <%= @event.start.strftime("%Y") %>
+  </div>
+  <div id="calendar_month">
+    <%= @event.start.strftime("%b") %>
+  </div>
+  <div id="calendar_day">
+    <%= @event.start.strftime("%A") %>
+  </div>
+  <div id="calendar_date">
+    <%= @event.start.strftime("%-d") %>
+  </div>
+  <div style="margin: 2em 1.5em;">
+  <%= @event.start.strftime("%H:%M %p") %>
+  </div>
+</div>
+
+<div id="calendar"">
+  <div id="calendar_year">
+    <%= @event.end.strftime("%Y") %>
+  </div>
+  <div id="calendar_month">
+    <%= @event.end.strftime("%b") %>
+  </div>
+  <div id="calendar_day">
+    <%= @event.end.strftime("%A") %>
+  </div>
+  <div id="calendar_date">
+    <%= @event.end.strftime("%-d") %>
+  </div>
+  <div style="margin: 2em 1.5em;">
+  <%= @event.end.strftime("%H:%M %p") %>
+  </div>
+</div>
+
+  <% if @event.location.latitude? %>
+    <div style="float: right; border: 1px solid #ccc; margin: 3em 0 1em 1em;"><%= link_to image_tag(map_url), "http://maps.google.com/maps?q="+@event.location.latitude+",+"+@event.location.longitude, :target => "_blank" %></div>
+  <% end %>
+  
+<p><b>Where:</b> <%= @event.location.short_name %> - <%= @event.location.city %>, <%= @event.location.state %></p>
