fixed hp calendar to include all event types

--- a/app/views/pages/_hp_calendar.html.erb
+++ b/app/views/pages/_hp_calendar.html.erb
@@ -4,9 +4,9 @@
 
 <table class="table_border" width="400">
     <tr>
-        <th>Date</th>
+        <th style="width: 80px;">Date</th>
         <th>Event</th>
-        <th>Type</th>
+        <th style="width: 120px;">Type</th>
     </tr>
 
 <% @events.each do |event| %>
