--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -12,8 +12,9 @@
   <% end %>
 
 
-not working...
-
+not working...<br />
+Member id: <%= @member.id %><br />
+user id: <%= @member.user.id %><br />
 <div class="indent_row">
 <h3>Login Info</h3>
   <%= f.fields_for :user do |builder| %>
@@ -24,24 +25,13 @@ not working...
 
 <% if current_user.roles.any? {|role| role.name == "superuser" or role.name == "admin" } %>
 <div class="indent_row">
+
 <h3>Website Role(s)</h3>
-<div class="indent_row">
-    <% @roles.each.each_with_index do |role, i| %>
-    <% if i == 0 %>
-      <div class="cell">
-    <% end %>
-      <%= check_box_tag('role_list[]', role.id, @member.user.roles.collect {|obj| obj.id}.include?(role.id)) %><%= role.name %><br />
-    <% if i == 2 %>
-      </div>
-      <div class="cell">
-    <% end %>
-    <% if i == 5 %>
-      </div>
-      <div class="cell">
-    <% end %>
-    <% end %>
+  <%= f.fields_for :roles do |builder| %>
+    <%= render "roles", :f => builder %>
+  <% end %>
+
 </div>
-</div></div>
 <% end %>
 
 <div class="indent_row">
