--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -1,39 +1,33 @@
-<p id="notice"><%= notice %></p>
+<% content_for :sidebar do %>
+  <%= render "events/event_details" %>
+<% end %>
 
-<p>
-  <b>Event:</b>
-  <%= @trip.event.title %>
-</p>
-
-<p>
-  <b>Crew arrival:</b>
-  <%= @trip.crew_arrival %>
-</p>
-
-<p>
-  <b>Tug time:</b>
-  <%= @trip.tug_time %>
-</p>
-
-<p>
-  <b>Wheels up:</b>
-  <%= @trip.wheels_up %>
-</p>
-
-<p>
-  <b>Destination eta:</b>
-  <%= @trip.destination_eta %>
-</p>
-
-<p>
-  <b>Return eta:</b>
-  <%= @trip.return_eta %>
-</p>
-
-<p>
-  <b>Notes:</b>
-  <%= @trip.notes %>
-</p>
-
+<h1><%= @trip.event.title %></h1>
+<table width="500" class="table_border">
+  <tr>
+    <td width="150">Crew arrival</td>
+    <td><strong><%= @trip.crew_arrival.strftime("%b %d - %H:%M") %></strong></td>
+  </tr>
+  <tr>
+    <td>Tug time</td>
+    <td><strong><%= @trip.tug_time.strftime("%b %d - %H:%M") %></strong></td>
+  </tr>
+  <tr>
+    <td>Wheels up</td>
+    <td><strong><%= @trip.wheels_up.strftime("%b %d - %H:%M") %></strong></td>
+  </tr>
+  <tr>
+    <td>Destination ETA</td>
+    <td><strong><%= @trip.destination_eta.strftime("%b %d - %H:%M") %></strong></td>
+  </tr>
+  <tr>
+    <td>Return ETA</td>
+    <td><strong><%= @trip.return_eta.strftime("%b %d - %H:%M") %></strong></td>
+  </tr>
+  <tr>
+    <td>Notes:</td>
+    <td><%= @trip.notes %></td>
+  </tr>
+</table>
 <%= link_to 'Edit', edit_trip_path(@trip) %> |
 <%= link_to 'Back', trips_path %>
