added placeholders in form fields for trip form

--- a/app/views/trips/_form.html.erb
+++ b/app/views/trips/_form.html.erb
@@ -85,80 +85,84 @@
 <div class="indent_row">
   <div class="cell field"> 
     <%= f.label :fuel_start %>:<br />
-    <%= f.text_field :fuel_start, :size => 20 %>
+    <%= f.text_field :fuel_start, :size => 20, :placeholder => "gallons" %>
   </div>
   <div class="cell field"> 
     <%= f.label :fuel_end %>:<br />
-    <%= f.text_field :fuel_end, :size => 20 %>  </div>
+    <%= f.text_field :fuel_end, :size => 20, :placeholder => "gallons" %>  </div>
 </div>
 <div class="indent_row">
   <div class="cell field"> 
     <%= f.label :oil_start %>:<br />
-    <%= f.text_field :oil_start, :size => 20 %>
+    <%= f.text_field :oil_start, :size => 20, :placeholder => "gallons" %>
   </div>
   <div class="cell field"> 
     <%= f.label :oil_end %>:<br />
-    <%= f.text_field :oil_end, :size => 20 %>  </div>
+    <%= f.text_field :oil_end, :size => 20, :placeholder => "gallons" %>
+  </div>
 </div>
 <div class="indent_row">
   <div class="cell field"> 
     <%= f.label :hobbs_start %>:<br />
-    <%= f.text_field :hobbs_start, :size => 20 %>
+    <%= f.text_field :hobbs_start, :size => 20, :placeholder => "hobbs time" %>
   </div>
   <div class="cell field"> 
     <%= f.label :hobbs_end %>:<br />
-    <%= f.text_field :hobbs_end, :size => 20 %>  </div>
+    <%= f.text_field :hobbs_end, :size => 20, :placeholder => "hobbs time" %>
+  </div>
 </div>
 <div class="clearer"></div>
 <h2>Show</h2>
 <div class="indent_row">
   <div class="cell field"> 
     <%= f.label :show_fees %>:<br />
-    <%= f.text_field :show_fees, :size => 20 %>
+    <%= f.text_field :show_fees, :size => 20, :placeholder => "$ received from show" %>
   </div>
   <div class="cell field"> 
     <%= f.label :show_expenses %>:<br />
-    <%= f.text_field :show_expenses, :size => 20 %>  </div>
+    <%= f.text_field :show_expenses, :size => 20, :placeholder => "expenses incurred" %>
+  </div>
 </div>
 <div class="indent_row">
   <div class="cell field"> 
     <%= f.label :t_shirt_cost %>:<br />
-    <%= f.text_field :t_shirt_cost, :size => 20 %>
+    <%= f.text_field :t_shirt_cost, :size => 20, :placeholder => "cost of shirts sold" %>
   </div>
   <div class="cell field"> 
     <%= f.label :t_shirt_sales %>:<br />
-    <%= f.text_field :t_shirt_sales, :size => 20 %>  </div>
+    <%= f.text_field :t_shirt_sales, :size => 20, :placeholder => "sales from t-shirts" %>
+  </div>
 </div>
 <div class="clearer"></div>
 <h2>LFHE Rides</h2>
 <div class="indent_row">
   <div class="cell field"> 
     <%= f.label :rides_given %>:<br />
-    <%= f.text_field :rides_given, :size => 20 %>
+    <%= f.text_field :rides_given, :size => 20, :placeholder => "Qty of LHFE flights" %>
   </div>
   <div class="cell field"> 
     <%= f.label :total_pax %>:<br />
-    <%= f.text_field :total_pax, :size => 20 %>
+    <%= f.text_field :total_pax, :size => 20, :placeholder => "Qty of LHFE pax" %>
   </div>
 </div>
 <div class="indent_row">
   <div class="cell field"> 
     <%= f.label :pax_income %>:<br />
-    <%= f.text_field :pax_income, :size => 20 %>
+    <%= f.text_field :pax_income, :size => 20, :placeholder => "$ from LHFE rides" %>
   </div>
   <div class="cell field"> 
     <%= f.label :hq_amount_paid %>:<br />
-    <%= f.text_field :hq_amount_paid, :size => 20 %>
+    <%= f.text_field :hq_amount_paid, :size => 20, :placeholder => "LFHE portion to HQ" %>
   </div>
 </div>
 <div class="indent_row">
   <div class="cell field"> 
     <%= f.label :rides_fuel %>:<br />
-    <%= f.text_field :rides_fuel, :size => 20 %>
+    <%= f.text_field :rides_fuel, :size => 20, :placeholder => "LFHE fuel used"  %>
   </div>
   <div class="cell field"> 
     <%= f.label :rides_oil %>:<br />
-    <%= f.text_field :rides_oil, :size => 20 %>  </div>
+    <%= f.text_field :rides_oil, :size => 20, :placeholder => "LFHE oil used"  %>  </div>
 </div>
 
 <div class="clearer"></div>
