--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -24,7 +24,7 @@
     <%= @event.start.strftime("%A") %>
   </div>
   <div id="calendar_date">
-    <%= @event.start.strftime("%-d") %>
+    <%= @event.start.strftime("%d") %>
   </div>
 </div>
 
