--- a/app/assets/stylesheets/scaffold.css
+++ b/app/assets/stylesheets/scaffold.css
@@ -32,8 +32,8 @@ div.actions {
 
 .field_with_errors {
   padding: 2px;
-  background-color: red;
-  display: table;
+  /*background-color: red;
+  display: table;*/
 }
 
 #error_explanation {
