--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -35,5 +35,10 @@
     <td><%= @trip.notes %></td>
   </tr>
 </table>
+
+<div style="text-align: center; display: block;">
+  <%= button_to "Trip Financials", trip_financials_path(@trip) %>
+</div>
+
 <%= link_to 'Edit', edit_trip_path(@trip) %> |
 <%= link_to 'Back', trips_path %>
