--- a/app/views/members/members_list.html.erb
+++ b/app/views/members/members_list.html.erb
@@ -29,7 +29,7 @@
     <% else %>
       <td>---</td>    
     <% end %>
-    <td><%= member.email %></td>
+    <td><%= member.user.email %></td>
   </tr>
 <% end %>
 </table>
