removed web maintenance sidebar from gallery

--- a/app/views/galleries/index.html.erb
+++ b/app/views/galleries/index.html.erb
@@ -1,5 +1,5 @@
 <% content_for :sidebar do %>
-  <%= render "sidebars/web_maintenance" %>
+  <%= render "sidebars/calendar" %>
 <% end %>
 
 <h1>Photo Galleries</h1>
