--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,3 +1,10 @@
+<% content_for :sidebar do %>
+  <div align="center">
+  <%= button_to "Add New Location", new_location_path, :method => :get %>
+  </div>
+<% end %>
+
+
 <h1>Locations</h1>
 
 <table width="500" class="table_border">
@@ -6,20 +13,14 @@
     <th>Airport</th>
     <th>Latitude</th>
     <th>Longitude</th>
-    <th></th>
-    <th></th>
-    <th></th>
   </tr>
 
 <% @locations.each do |location| %>
   <tr class="<%= cycle('odd_row', 'even_row') %>">
-    <td><%= location.short_name %></td>
+    <td><%= link_to location.short_name, location %></td>
     <td><%= location.icao_identifier %></td>
     <td><%= location.latitude %></td>
     <td><%= location.longitude %></td>
-    <td><%= link_to 'Show', location %></td>
-    <td><%= link_to 'Edit', edit_location_path(location) %></td>
-    <td><%= link_to 'Destroy', location, :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
 <% end %>
 </table>
