--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -1,4 +1,15 @@
-<p id="notice"><%= notice %></p>
+<% content_for :sidebar do %>
+  <script src="http://maps.google.com/maps?file=api&amp;v=2&amp;key=AIzaSyA2CUo-V9LEi2YuJvh6F_Sf7NkmpXnC4yE"
+      type="text/javascript"></script>
+
+  <% map_url = "http://maps.googleapis.com/maps/api/staticmap?zoom=8&size=200x200&maptype=roadmap&markers=color:red%7Clabel:X%7C"+@location.latitude+","+@location.longitude+"&sensor=false" %>
+
+  <p><strong><%= @location.short_name %> - <%= @location.city %>, <%= @location.state %></strong></p>
+
+  <% if @location.latitude? %>
+    <div style="float: right; border: 1px solid #ccc; margin: 1em 0 1em 1em;"><%= link_to image_tag(map_url), "http://maps.google.com/maps?q="+@location.latitude+",+"+@location.longitude, :target => "_blank" %></div>
+  <% end %>
+<% end %>
 
 <p>
   <b>Name:</b>
