changed total time to variable

--- a/app/views/trips/trip_financials.html.erb
+++ b/app/views/trips/trip_financials.html.erb
@@ -92,6 +92,6 @@ Total Flying time: <strong><%= total_time %></strong> hours</p>
     <strong>Hobbs</strong><br /> 
     Start: <%= @trip.lfhe_hobbs_start %><br />
     End: <%= @trip.lfhe_hobbs_end %><br />
-    <strong>Net: <%= @trip.lfhe_hobbs_end - @trip.lfhe_hobbs_start %></strong>
+    <strong>Net: <%= @total_time %></strong>
   </div>
 </div>
