--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing trips</h1>
+<h1>Trips</h1>
 
 <table width="500" class="table_border">
   <tr>
@@ -22,6 +22,4 @@
 <% end %>
 </table>
 
-<br />
 
-<%= link_to 'New Trip', new_trip_path %>
