--- a/app/views/teasers/index.html.erb
+++ b/app/views/teasers/index.html.erb
@@ -1,3 +1,9 @@
+<% content_for :sidebar do %>
+  <div align="center">
+  <%= button_to "New Teaser", new_teaser_path, :method => :get %>
+  </div>
+<% end %>
+
 <h1>Listing teasers</h1>
 
 <table width="575" class="table_border">
