added button on admin to view ride_requests

--- a/app/views/pages/admin_home.html.erb
+++ b/app/views/pages/admin_home.html.erb
@@ -1,7 +1,13 @@
 <h1>Admin Section</h1>
 
+<br />
+<div class="indent_row">
 <%= button_to "AirShow Signups", event_signups_path, :method => :get %>
-
-<%= button_to "What's Hot", teasers_path, :method => :get %>
-
+<br />
+<%= button_to "Ride Requests", ride_requests_path, :method => :get %>
+<br />
 <%= button_to "Trips", trips_path, :method => :get %>
+<br />
+<%= button_to "What's Hot", teasers_path, :method => :get %>
+<br />
+</div>
