addded language about not picking an airshow

--- a/app/views/ride_requests/_form.html.erb
+++ b/app/views/ride_requests/_form.html.erb
@@ -76,6 +76,7 @@
 
     <% end %>
   </div>
+<p>If the air shows listed are not convenient for you - we will contact you when we plan an event near your city/state indicated above.</p>
 </div>
 
 <div class="clearer"></div>
