--- a/app/views/ride_requests/_form.html.erb
+++ b/app/views/ride_requests/_form.html.erb
@@ -15,37 +15,38 @@
 
 <div class="indent_row">
   <div class="cell field">
-    <%= f.label :first_name %><br />
+    <%= f.label :first_name %>*<br />
     <%= f.text_field :first_name, :size => '20' %>
   </div>
   <div class="cell field">
-    <%= f.label :last_name %><br />
+    <%= f.label :last_name %>*<br />
     <%= f.text_field :last_name, :size => '20' %>
   </div>
 </div>
 
 <div class="indent_row">
   <div class="cell field">
-    <%= f.label :city %><br />
+    <%= f.label :city %>*<br />
     <%= f.text_field :city, :size => '20' %>
   </div>
   <div class="cell field">
-    <%= f.label :state %><br />
+    <%= f.label :state %>*<br />
     <%= f.text_field :state, :size => '20' %>
   </div>
 </div>
 
 <div class="indent_row">
   <div class="cell field">
-    <%= f.label :email %><br />
+    <%= f.label :email %>*<br />
     <%= f.text_field :email, :size => '20' %>
   </div>
   <div class="cell field">
-    <%= f.label :phone %><br />
+    <%= f.label :phone %>*<br />
     <%= f.text_field :phone, :size => '20' %>
   </div>
 </div>
-
+<div class="clearer"></div>
+* = required field
 <% if !@air_shows_public.blank? %>
 <div class="indent_row">
   <p>Please indicate if you are available at one of the following airshows:</p>
