updated front page calendar format, fixed new member role issue, fixed edit users

--- a/app/assets/stylesheets/web_style.css
+++ b/app/assets/stylesheets/web_style.css
@@ -625,6 +625,45 @@ img.fr {
   float: right;
   }
 
+#calendar-ii {
+  float: left;width: 40px;
+  height: 40px;
+  margin: 0 0.25em;
+  border: 1px solid #333;
+  border-radius: 6px;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  }
+#calendar_month-ii {
+  text-align: center;
+  font-size: 10px;
+  font-weight: bold;
+  margin: 0 0 0 0;
+  color: #fff;
+  background: #cc0000;
+  border-radius: 5px 5px 0px 0px;
+  -moz-border-radius: 0px;
+  -webkit-border-radius: 5px 5px 0px 0px;
+  }
+#calendar_date-ii {
+  text-align: center;
+  font-size: 16px;
+  font-weight: bold;
+  margin: 3px 0 0 0;
+  padding-top: 0px;
+  color: #000;
+  }
+
+.calendar_row {
+  float: left;
+  margin: 0 10px 10px 20px;
+  border: 1px solid #eee;
+  border-bottom: none;
+  border-radius: 5px 5px 0px 0px;
+  -moz-border-radius: 0px;
+  -webkit-border-radius: 5px 5px 0px 0px;
+    }
+
 #calendar {
   float: right;
   width: 97px;
