--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -11,9 +11,8 @@
     </div>
   <% end %>
 
-
-<div class="indent_row">
 <h3>Login Info</h3>
+<div class="indent_row">
   <%= f.fields_for :user do |builder| %>
         <%= render "user_fields", :f => builder %> 
   <% end %>
@@ -21,108 +20,84 @@
 <div class="clearer"></div>
 
 <% if current_user.roles.any? {|role| role.name == "superuser" or role.name == "admin" } %>
-<div class="indent_row">
-
 <h3>Website Role(s)</h3>
+<div class="indent_row">
   <%= f.fields_for :roles do |builder| %>
     <%= render "roles", :f => builder %>
   <% end %>
 
 </div>
 <% end %>
-
-<div class="indent_row">
+<div class="clearer"></div>
 <h3>Contact Info</h3>
-  <div class="cell">
-  <div class="field">
+<div class="indent_row">
+  <div class="cell field">
     <%= f.label :first_name %><br />
     <%= f.text_field :first_name, :size => '20' %>
   </div>
-  <div class="field">
-    <%= f.label :street_1 %><br />
-    <%= f.text_field :street_1, :size => '20' %>
-  </div>
-  </div>
-  <div class="cell">  
-  <div class="field">
+  <div class="cell field">
     <%= f.label :last_name %><br />
     <%= f.text_field :last_name, :size => '20' %>
   </div>
-  <div class="field">
+</div>
+
+<div class="indent_row">
+  <div class="cell field">
+    <%= f.label :street_1 %><br />
+    <%= f.text_field :street_1, :size => '20' %>
+  </div>
+  <div class="cell field">  
     <%= f.label :street_2 %><br />
     <%= f.text_field :street_2, :size => '20' %>
   </div>
-  </div>
 </div>
 
-<div class="clearer"></div>
-
 <div class="indent_row">
-  <div class="cell">
-  <div class="field">
+  <div class="cell field">
     <%= f.label :city %><br />
     <%= f.text_field :city, :size => '20' %>
   </div>
-  </div>
-  <div class="cell">
-  <div class="field">
+  <div class="cell field">
     <%= f.label :state %><br />
     <%= f.text_field :state, :size => '5' %>
   </div>
-  </div>
-  <div class="cell">
-  <div class="field">
+  <div class="cell field">
     <%= f.label :zip %><br />
     <%= f.text_field :zip, :size => '10' %>
   </div>
-  </div>
 </div>
 
-<div class="clearer"></div>
-
 <div class="indent_row">
-  <div class="cell">
-  <div class="field">
+  <div class="cell field">
     <%= f.label :home_phone %><br />
-    <%= f.text_field :home_phone, :size => '15' %>
+    <%= f.text_field :home_phone, :size => '13' %>
   </div>
-  </div>
-  <div class="cell">
-  <div class="field">
+  <div class="cell field">
     <%= f.label :work_phone %><br />
-    <%= f.text_field :work_phone, :size => '15' %>
+    <%= f.text_field :work_phone, :size => '13' %>
   </div>
-  </div>
-  <div class="cell">
-  <div class="field">
+  <div class="cell field">
     <%= f.label :cell_phone %><br />
-    <%= f.text_field :cell_phone, :size => '15' %>
-  </div>
+    <%= f.text_field :cell_phone, :size => '13' %>
   </div>
 </div>
 
 <div class="clearer"></div>
 
-<div class="indent_row">
 <h3>CAF Info</h3>
-  <div class="cell">
-  <div class="field">
+<div class="indent_row">
+  <div class="cell field">
     <%= f.label :caf_col_no, "CAF Col #" %><br />
     <%= f.text_field :caf_col_no, :size => '15' %>
   </div>
-  </div>
-  <div class="cell">
-  <div class="field">
+  <div class="cell field">
     <%= f.label :dd_dues_date, "Dues Date" %><br />
     <%= f.text_field :dd_dues_date, :size => '15' %>
   </div>
-   </div>
-  <div class="cell">
-  <div class="field">
+  <div class="cell field">
     <%= f.label :active %><br />
     <%= f.check_box :active %>
   </div>
-</div>
 </div>
   
 <div class="clearer"></div>
