--- a/app/views/pages/admin_home.html.erb
+++ b/app/views/pages/admin_home.html.erb
@@ -22,5 +22,7 @@
 <br />
 <%= button_to "Roles", roles_path, :method => :get %>
 <br />
+<%= button_to "Users", users_path, :method => :get %>
+<br />
 </div>
 <% end %>
