--- a/app/assets/stylesheets/event_signups.css
+++ b/app/assets/stylesheets/event_signups.css
@@ -2,3 +2,11 @@
   Place all the styles related to the matching controller here.
   They will automatically be included in application.css.
 */
+
+.radio_button_selection {
+  border-right: 1px solid #ccc;
+  margin: 0;
+  text-align: center;
+  font-size:1.4em;
+  width: 120px;
+  }
