--- a/app/views/event_signups/_form.html.erb
+++ b/app/views/event_signups/_form.html.erb
@@ -26,13 +26,18 @@
   </div>
 </div>
 <div class="indent_row" style="width: 560px;">
-  <div class="cell">
+  <div class="cell" style="padding: 0 0 5em 10em;">
     <div class="field">
-      <%= f.label :commitment_level, "Commitment Level" %><br />
-      <%= f.text_field :commitment_level %>
+      <div class="cell radio_button_selection">
+        <label><%= f.radio_button 'commitment_level', 'Definite' %><br /><%= f.label :commitment_level, "Definite" %></label>
+      </div>
+      <div class="cell radio_button_selection" style="border: none;">
+        <label><%= f.radio_button 'commitment_level', 'Maybe' %><br /><%= f.label :commitment_level, "Maybe" %></label>
+      </div>
     </div>
   </div>
 </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
